--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "google-generativeai>=0.8.6",
     "langchain-core>=1.2.5",
     "langgraph>=1.0.5",
+    "langgraph-checkpoint-sqlite>=3.0.1",
     "litellm>=1.80.11",
     "loguru>=0.7.3",
     "pydantic>=2.12.5",
