--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "faiss-cpu>=1.13.2",
     "google-genai>=1.56.0",
     "google-generativeai>=0.8.6",
+    "ipython>=8.38.0",
     "langchain>=1.2.0",
+    "langchain-community>=0.4.1",
     "langchain-core>=1.2.5",
     "langgraph>=1.0.5",
     "langgraph-checkpoint-sqlite>=3.0.1",
