--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain>=1.2.0",
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.5",
+    "langchain-groq>=1.1.1",
     "langchain-litellm>=0.3.5",
     "langgraph>=1.0.5",
     "langgraph-checkpoint-sqlite>=3.0.1",
