--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "dotenv>=0.9.9",
     "faiss-cpu>=1.13.2",
+    "fastapi>=0.128.0",
     "google-genai>=1.56.0",
     "google-generativeai>=0.8.6",
     "ipython>=8.38.0",
@@ -22,4 +23,5 @@ dependencies = [
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "sentence-transformers>=5.2.0",
+    "uvicorn>=0.40.0",
 ]
