feat(backend): Implement Channel-Persona management, dynamic Help, and fix command parsing

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "scranton-agent"
+name = "konex-backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "Konex Pro Backend - Intelligent Agentic System for IIAB"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -18,10 +18,20 @@ dependencies = [
     "langchain-litellm>=0.3.5",
     "langgraph>=1.0.5",
     "langgraph-checkpoint-sqlite>=3.0.1",
+    "langgraph-checkpoint-postgres>=2.0.0",
     "litellm>=1.80.11",
     "loguru>=0.7.3",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "sentence-transformers>=5.2.0",
     "uvicorn>=0.40.0",
+    "asyncpg>=0.29.0",
+    "sqlmodel>=0.0.16",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["app*"]
